Rework play queue: reordering, lazy windowing and seeded shuffle
Queues now store a source (MOVIE/SHOW/ALBUM/LIBRARY plus cursor) and
materialize items in chunks of 50; the server appends the next chunk
when fewer than 15 items remain after the current one. Shuffle uses a
seeded md5 ordering in PostgreSQL so paged chunks continue the same
permutation without duplicates, enabling whole-library shuffle without
materializing the library.

New mutations movePlayQueueItem (gap-based midpoint positions with
whole-queue rebalance), removePlayQueueItem and addPlayQueueItem. The
three createPlayQueueFor* mutations are replaced by one generic
createPlayQueue(input), the broken currentItemEpisode/Movie/Track
resolvers by currentItem, position becomes Float and TRACK is added to
the GraphQL MediaType enum. All play queue operations now verify queue
ownership.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>